hphp/test/quick/ctor_param_promotion_abstract.php.expectf

Fatal error: Class A contains an abstract method and must therefore be declared abstract in %s/ctor_param_promotion_abstract.php on line 3
